--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-pink-600 text-center mb-8">Anniversary Games 💕</h1>
+        <div class="max-w-4xl mx-auto text-center mb-12">
+            <h1 class="text-5xl font-bold text-pink-600 mb-6">Happy 4 Years! 💕</h1>
+            <div class="bg-white rounded-lg shadow-lg p-8 border-2 border-pink-200">
+                <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                    I wanted to make you something special for anytime you are unsure of what to do. 
+                    So I decided, what if you could play your favourite social games that actually revolve around you!
+                </p>
+                <p class="text-lg text-gray-700 leading-relaxed font-medium">
+                    Every game here has been redesigned to cater to your likes and preferences ✨
+                </p>
+            </div>
+        </div>
+        
+        <h2 class="text-3xl font-bold text-pink-600 text-center mb-8">Choose Your Game</h2>
         <div class="grid md:grid-cols-4 gap-6 max-w-8xl mx-auto">
             <a href="headsup.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎭 Heads Up!</h2>
