--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
 </head>
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div class="container mx-auto px-4 py-8">
-        <div class="max-w-4xl mx-auto text-center mb-12">
-            <h1 class="text-5xl font-bold text-pink-600 mb-6">Happy 4 Years! 💕</h1>
-            <div class="bg-white rounded-lg shadow-lg p-8 border-2 border-pink-200">
-                <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                    I wanted to make you something special for anytime you are unsure of what to do. 
-                    So I decided, what if you could play your favourite social games that actually revolve around you!
-                </p>
-                <p class="text-lg text-gray-700 leading-relaxed font-medium">
-                    Every game here has been redesigned to cater to your likes and preferences ✨
-                </p>
-            </div>
-        </div>
+        <h1 class="text-4xl font-bold text-pink-600 text-center mb-8">Anniversary Games 💕</h1>
         
-        <h2 class="text-3xl font-bold text-pink-600 text-center mb-8">Choose Your Game</h2>
-        <div class="grid md:grid-cols-4 gap-6 max-w-8xl mx-auto">
+        <div class="grid md:grid-cols-4 gap-6 max-w-8xl mx-auto mb-12">
             <a href="headsup.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎭 Heads Up!</h2>
                 <p class="text-gray-600">Guess the celebrity! Hide, show, and celebrate when you get it right.</p>
@@ -39,6 +27,19 @@
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎪 Charades</h2>
                 <p class="text-gray-600">Act it out! No words allowed - just gestures and movements.</p>
             </a>
+        </div>
+        
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="text-3xl font-bold text-pink-600 mb-6">Happy 4 Years! 💕</h2>
+            <div class="bg-white rounded-lg shadow-lg p-8 border-2 border-pink-200">
+                <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                    I wanted to make you something special for anytime you are unsure of what to do. 
+                    So I decided, what if you could play your favourite social games that actually revolve around you!
+                </p>
+                <p class="text-lg text-gray-700 leading-relaxed font-medium">
+                    Every game here has been redesigned to cater to your likes and preferences ✨
+                </p>
+            </div>
         </div>
     </div>
 </body>
