--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anniversary Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div class="container mx-auto px-4 py-8">
@@ -29,9 +30,19 @@
             </a>
         </div>
         
-        <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-pink-600 mb-6">Happy 4 Years! 💕</h2>
-            <div class="bg-white rounded-lg shadow-lg p-8 border-2 border-pink-200">
+        <div class="text-center">
+            <button onclick="openModal()" class="bg-pink-500 text-white px-8 py-4 rounded-lg hover:bg-pink-600 text-lg font-bold shadow-lg">
+                Click here for a special message 💕
+            </button>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+        <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl mx-4 relative">
+            <button onclick="closeModal()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+            <h2 class="text-3xl font-bold text-pink-600 mb-6 text-center">Happy 4 Years! 💕</h2>
+            <div class="text-center">
                 <p class="text-lg text-gray-700 leading-relaxed mb-4">
                     I wanted to make you something special for anytime you are unsure of what to do. 
                     So I decided, what if you could play your favourite social games that actually revolve around you!
@@ -42,5 +53,31 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function openModal() {
+            document.getElementById('modal').classList.remove('hidden');
+            document.getElementById('modal').classList.add('flex');
+            
+            // Trigger confetti
+            confetti({
+                particleCount: 150,
+                spread: 70,
+                origin: { y: 0.6 }
+            });
+        }
+
+        function closeModal() {
+            document.getElementById('modal').classList.add('hidden');
+            document.getElementById('modal').classList.remove('flex');
+        }
+
+        // Close modal when clicking outside
+        document.getElementById('modal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeModal();
+            }
+        });
+    </script>
 </body>
 </html>
