Update main title to 'Games for Sumyukta'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-pink-600 text-center mb-8">Anniversary Games 💕</h1>
+        <h1 class="text-4xl font-bold text-pink-600 text-center mb-8">Games for Sumyukta 💕</h1>
         
         <div class="grid md:grid-cols-4 gap-6 max-w-8xl mx-auto mb-12">
             <a href="headsup.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
