Add 'Love, Sampath' signature to special message modal

--- a/headsup.html
+++ b/headsup.html
@@ -11,7 +11,10 @@
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div id="app">
         <div class="container mx-auto px-4 py-8">
-            <a href="index.html" class="mb-4 bg-pink-200 text-pink-700 px-4 py-2 rounded-lg hover:bg-pink-300 inline-block">← Back to Home</a>
+            <div class="flex justify-between items-center mb-4">
+                <a href="index.html" class="bg-pink-200 text-pink-700 px-4 py-2 rounded-lg hover:bg-pink-300">← Back to Home</a>
+                <button onclick="openRulesModal()" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Rules</button>
+            </div>
             <div class="max-w-md mx-auto bg-white rounded-lg shadow-lg p-8 text-center">
                 <h2 class="text-3xl font-bold text-pink-600 mb-6">🎭 Heads Up!</h2>
                 
@@ -37,6 +40,26 @@
                         <button @click="nextCelebrity" class="bg-pink-300 text-pink-700 px-8 py-3 rounded-lg hover:bg-pink-400 text-lg font-bold">Next →</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Rules Modal -->
+    <div id="rulesModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+        <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl mx-4 relative">
+            <button onclick="closeRulesModal()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+            <h2 class="text-3xl font-bold text-pink-600 mb-6 text-center">🎭 Heads Up! Rules</h2>
+            <div class="text-left space-y-4">
+                <p class="text-lg text-gray-700"><strong>How to Play:</strong></p>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>One player holds the device on their forehead (can't see the screen)</li>
+                    <li>Other players can see the celebrity name and give clues</li>
+                    <li>Use <strong>Hide/Show</strong> buttons to control when the name appears</li>
+                    <li>Press <strong>Timer</strong> to start a 1-minute countdown</li>
+                    <li>When the player guesses correctly, hit <strong>Got it!</strong> for confetti celebration</li>
+                    <li>Press <strong>Next</strong> to move to the next celebrity (resets timer)</li>
+                </ul>
+                <p class="text-sm text-gray-600 mt-4"><em>Tip: Start with the name hidden, then show it to other players while keeping it hidden from the guesser!</em></p>
             </div>
         </div>
     </div>
@@ -109,6 +132,22 @@
                 this.stopTimer();
             }
         }).mount('#app');
+
+        function openRulesModal() {
+            document.getElementById('rulesModal').classList.remove('hidden');
+            document.getElementById('rulesModal').classList.add('flex');
+        }
+
+        function closeRulesModal() {
+            document.getElementById('rulesModal').classList.add('hidden');
+            document.getElementById('rulesModal').classList.remove('flex');
+        }
+
+        document.getElementById('rulesModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeRulesModal();
+            }
+        });
     </script>
 </body>
 </html>
