--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
                     I wanted to make you something special for anytime you are unsure of what to do. 
                     So I decided, what if you could play your favourite social games that actually revolve around you!
                 </p>
-                <p class="text-lg text-gray-700 leading-relaxed font-medium">
+                <p class="text-lg text-gray-700 leading-relaxed font-medium mb-6">
                     Every game here has been redesigned to cater to your likes and preferences ✨
+                </p>
+                <p class="text-right text-lg text-pink-600 font-medium italic">
+                    Love, Sampath
                 </p>
             </div>
         </div>
