--- a/wavelength.html
+++ b/wavelength.html
@@ -10,7 +10,10 @@
 <body class="bg-gradient-to-br from-pink-50 to-white min-h-screen">
     <div id="app">
         <div class="container mx-auto px-4 py-8">
-            <a href="index.html" class="mb-4 bg-pink-200 text-pink-700 px-4 py-2 rounded-lg hover:bg-pink-300 inline-block">← Back to Home</a>
+            <div class="flex justify-between items-center mb-4">
+                <a href="index.html" class="bg-pink-200 text-pink-700 px-4 py-2 rounded-lg hover:bg-pink-300">← Back to Home</a>
+                <button onclick="openRulesModal()" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Rules</button>
+            </div>
             <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-8">
                 <h2 class="text-3xl font-bold text-pink-600 mb-6 text-center">🌊 Wavelength</h2>
                 
@@ -52,6 +55,26 @@
                         <p>Green zone = target area. Get as close as possible to score points!</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Rules Modal -->
+    <div id="rulesModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+        <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl mx-4 relative">
+            <button onclick="closeRulesModal()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+            <h2 class="text-3xl font-bold text-pink-600 mb-6 text-center">🌊 Wavelength Rules</h2>
+            <div class="text-left space-y-4">
+                <p class="text-lg text-gray-700"><strong>How to Play:</strong></p>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>One player is the <strong>Psychic</strong> - they can see the target zone (green area)</li>
+                    <li>The Psychic gives a clue for where a concept falls on the spectrum</li>
+                    <li>Example: For "Hot vs Cold" with target on the far hot side, clue might be "The Sun"</li>
+                    <li>Team discusses and moves the dial to guess the target location</li>
+                    <li>Press <strong>Lock In Guess</strong> to reveal how close you were</li>
+                    <li><strong>Scoring:</strong> Perfect (4pts), Great (3pts), Good (2pts), Close (1pt), Miss (0pts)</li>
+                </ul>
+                <p class="text-sm text-gray-600 mt-4"><em>Goal: Get as close to the center of the green target zone as possible!</em></p>
             </div>
         </div>
     </div>
@@ -124,6 +147,22 @@
                 this.loadSpectrums();
             }
         }).mount('#app');
+
+        function openRulesModal() {
+            document.getElementById('rulesModal').classList.remove('hidden');
+            document.getElementById('rulesModal').classList.add('flex');
+        }
+
+        function closeRulesModal() {
+            document.getElementById('rulesModal').classList.add('hidden');
+            document.getElementById('rulesModal').classList.remove('flex');
+        }
+
+        document.getElementById('rulesModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeRulesModal();
+            }
+        });
     </script>
 </body>
 </html>
