--- a/headsup.html
+++ b/headsup.html
@@ -15,8 +15,8 @@
                 <a href="index.html" class="bg-pink-200 text-pink-700 px-4 py-2 rounded-lg hover:bg-pink-300">← Back to Home</a>
                 <button onclick="openRulesModal()" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Rules</button>
             </div>
-            <div class="max-w-md mx-auto bg-white rounded-lg shadow-lg p-8 text-center">
-                <h2 class="text-3xl font-bold text-pink-600 mb-6">🎭 Heads Up!</h2>
+            <div class="max-w-md mx-auto bg-white rounded-lg shadow-lg p-4 sm:p-8 text-center">
+                <h2 class="text-2xl sm:text-3xl font-bold text-pink-600 mb-6">🎭 Heads Up!</h2>
                 
                 <div v-if="timer > 0 && timerActive" class="mb-4 text-xl font-bold text-red-500">
                     Time: {{ Math.floor(timer / 60) }}:{{ (timer % 60).toString().padStart(2, '0') }}
@@ -35,9 +35,9 @@
                         <div v-else class="bg-red-100 text-red-600 px-4 py-3 rounded-lg text-sm font-medium text-center">{{ Math.floor(timer / 60) }}:{{ (timer % 60).toString().padStart(2, '0') }}</div>
                     </div>
                     
-                    <div class="grid grid-cols-2 gap-4">
-                        <button @click="gotIt" class="bg-green-500 text-white px-8 py-3 rounded-lg hover:bg-green-600 text-lg font-bold">Got it! 🎉</button>
-                        <button @click="nextCelebrity" class="bg-pink-300 text-pink-700 px-8 py-3 rounded-lg hover:bg-pink-400 text-lg font-bold">Next →</button>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                        <button @click="gotIt" class="bg-green-500 text-white px-6 sm:px-8 py-3 rounded-lg hover:bg-green-600 text-lg font-bold">Got it! 🎉</button>
+                        <button @click="nextCelebrity" class="bg-pink-300 text-pink-700 px-6 sm:px-8 py-3 rounded-lg hover:bg-pink-400 text-lg font-bold">Next →</button>
                     </div>
                 </div>
             </div>
@@ -89,6 +89,8 @@
                         const response = await fetch('data/celebrities.txt');
                         const text = await response.text();
                         this.celebrities = text.split('\n').filter(line => line.trim());
+                        // Start with random celebrity
+                        this.currentCelebrityIndex = Math.floor(Math.random() * this.celebrities.length);
                     } catch (error) {
                         console.error('Error loading celebrities:', error);
                     }
