--- a/scenarios.html
+++ b/scenarios.html
@@ -65,6 +65,8 @@
                         const response = await fetch('data/scenarios.txt');
                         const text = await response.text();
                         this.scenarios = text.split('\n').filter(line => line.trim());
+                        // Start with random scenario
+                        this.currentScenarioIndex = Math.floor(Math.random() * this.scenarios.length);
                     } catch (error) {
                         console.error('Error loading scenarios:', error);
                     }
