--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-4xl font-bold text-pink-600 text-center mb-8">Games for Sumyukta 💕</h1>
         
-        <div class="grid md:grid-cols-4 gap-6 max-w-8xl mx-auto mb-12">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-4xl mx-auto mb-12">
             <a href="headsup.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎭 Heads Up!</h2>
                 <p class="text-gray-600">Guess the celebrity! Hide, show, and celebrate when you get it right.</p>
@@ -28,6 +28,14 @@
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎪 Charades</h2>
                 <p class="text-gray-600">Act it out! No words allowed - just gestures and movements.</p>
             </a>
+            <a href="monikers.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
+                <h2 class="text-2xl font-bold text-pink-500 mb-4">🎭 Monikers</h2>
+                <p class="text-gray-600">3 rounds of the same cards: describe, one word, then charades!</p>
+            </a>
+            <a href="meme.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
+                <h2 class="text-2xl font-bold text-pink-500 mb-4">😂 What Do You Meme</h2>
+                <p class="text-gray-600">Create hilarious memes with personalized situations and funny captions!</p>
+            </a>
         </div>
         
         <div class="text-center">
@@ -39,18 +47,18 @@
 
     <!-- Modal -->
     <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-        <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl mx-4 relative">
+        <div class="bg-white rounded-lg shadow-xl p-4 sm:p-8 max-w-2xl mx-4 relative">
             <button onclick="closeModal()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
-            <h2 class="text-3xl font-bold text-pink-600 mb-6 text-center">Happy 4 Years! 💕</h2>
+            <h2 class="text-2xl sm:text-3xl font-bold text-pink-600 mb-6 text-center">Happy 4 Years! 💕</h2>
             <div class="text-center">
-                <p class="text-lg text-gray-700 leading-relaxed mb-4">
+                <p class="text-base sm:text-lg text-gray-700 leading-relaxed mb-4">
                     I wanted to make you something special for anytime you are unsure of what to do. 
                     So I decided, what if you could play your favourite social games that actually revolve around you!
                 </p>
-                <p class="text-lg text-gray-700 leading-relaxed font-medium mb-6">
+                <p class="text-base sm:text-lg text-gray-700 leading-relaxed font-medium mb-6">
                     Every game here has been redesigned to cater to your likes and preferences ✨
                 </p>
-                <p class="text-right text-lg text-pink-600 font-medium italic">
+                <p class="text-right text-base sm:text-lg text-pink-600 font-medium italic">
                     Love, Sampath
                 </p>
             </div>
