--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🌊 Wavelength</h2>
                 <p class="text-gray-600">Read minds by guessing where concepts fall on a spectrum between opposites.</p>
             </a>
-            <a href="charades.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
-                <h2 class="text-2xl font-bold text-pink-500 mb-4">🎪 Charades</h2>
-                <p class="text-gray-600">Act it out! No words allowed - just gestures and movements.</p>
+            <a href="didyouknow.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
+                <h2 class="text-2xl font-bold text-pink-500 mb-4">🧠 Did You Know?</h2>
+                <p class="text-gray-600">Discover fascinating facts about science, culture, and random curiosities!</p>
             </a>
             <a href="monikers.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
                 <h2 class="text-2xl font-bold text-pink-500 mb-4">🎭 Monikers</h2>
                 <p class="text-gray-600">3 rounds of the same cards: describe, one word, then charades!</p>
             </a>
             <a href="meme.html" class="bg-white rounded-lg shadow-lg p-6 cursor-pointer hover:shadow-xl transition-shadow border-2 border-pink-200 block">
-                <h2 class="text-2xl font-bold text-pink-500 mb-4">😂 What Do You Meme</h2>
-                <p class="text-gray-600">Create hilarious memes with personalized situations and funny captions!</p>
+                <h2 class="text-2xl font-bold text-pink-500 mb-4">💕 We're Not Really Strangers</h2>
+                <p class="text-gray-600">Deep conversation cards with 3 levels of intimacy and connection.</p>
             </a>
         </div>
         
